kubernetes/apps/vault/server/headless-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vault-internal
  namespace: security
  labels:
    app.kubernetes.io/name: vault
    app.kubernetes.io/instance: vault
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
  - name: http
    port: 8200
    targetPort: 8200
  - name: https-internal
    port: 8201
    targetPort: 8201
  selector:
    app.kubernetes.io/name: vault
    app.kubernetes.io/instance: vault
    component: server
