kubernetes/apps/vault/server/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  namespace: security
  labels:
    app.kubernetes.io/name: vault
    app.kubernetes.io/instance: vault
    app: vault
  annotations:
    cert-manager.io/cluster-issuer: iam-demo-certs-issuer
spec:
  tls:
  - hosts:
    - vault.iam-demo.test
    secretName: iam-demo-vault-tls
  rules:
  - host: vault.iam-demo.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vault
            port:
              number: 8200
